se zmienic zapomnialem dziadyge ale juz smiga

--- a/obrazki.html
+++ b/obrazki.html
@@ -85,7 +85,7 @@
         // Example usage
         const startId = 1;
         const endId = 20;
-        const url = 'http://127.0.0.1:5500/fotki/{id}.gif';
+        const url = 'https://kranuspro.github.io/fotki/{id}.gif';
 
         checkIDRangeAndDisplayImages(startId, endId, url);
     </script>
