--- a/obrazki.html
+++ b/obrazki.html
@@ -57,7 +57,7 @@
         function downloadImage(url) {
             const link = document.createElement('a');
             link.href = url;
-            link.download = 'image.jpg';
+            link.download = 'kranus.pro.gif';
             link.target = '_blank';
             link.click();
         }
