--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@
     <div id="x">
         <script type = "text/javascript" src = "//www.deszczowce.pl/skrypty/losowy_zart.php"></script>
     </div>
+    <div id="essa" style="width: 1px; height: 1px; padding: 1px;margin-top: 0px;">
+
+        <script>
+            var something = document.getElementById('essa');
+
+            something.style.cursor = 'pointer';
+            something.onclick = function() {
+                window.location.href = 'CLASSIFIED.zip';
+            };
+        </script>
+    </div>
 
     <div id="stopa_kocham_young_leosie_uwu">
 
