--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
     <div id="x">
         <script type = "text/javascript" src = "//www.deszczowce.pl/skrypty/losowy_zart.php"></script>
+        <br></br>
+        kontakt: sex@kranus.pro
     </div>
     <div id="essa" style="width: 1px; height: 1px; padding: 1px;margin-top: 0px;">
 
