tryb dla slepych!

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-    <script type = "text/javascript" src = "//www.deszczowce.pl/skrypty/kursor/kursor.php?kursor=angry_bird"></script>
+    <script type="text/javascript" src="//www.deszczowce.pl/skrypty/kursor/kursor.php?kursor=angry_bird"></script>
 
     <img src="img/kranuspro.gif" alt="kranus.pro" class="logo">
 
@@ -33,16 +33,20 @@
     </div>
 
     <div id="x">
-        kolekcja smiesznych gifow -> <a href="obrazki.html">kliknij tutaj</a>
+        kolekcja smiesznych gifow -> <a href="obrazki.html">
+            <div id="shadowBox">
+                <h3 class="rainbow rainbow_text_animated">kliknij tutaj</h3>
+            </div>
+        </a>
         <br>
         <br>
         kocham cie mamo <3 <img src="https://media.tenor.com/Or0Kdkr9gm0AAAAC/gg-cudownie.gif" alt="mama" class="mama"
             style="width: 25px; padding-top: 5px;">
-            
+
     </div>
 
     <div id="x">
-        <script type = "text/javascript" src = "//www.deszczowce.pl/skrypty/losowy_zart.php"></script>
+        <script type="text/javascript" src="//www.deszczowce.pl/skrypty/losowy_zart.php"></script>
         <br></br>
         kontakt: sex@kranus.pro
     </div>
@@ -52,7 +56,7 @@
             var something = document.getElementById('essa');
 
             something.style.cursor = 'pointer';
-            something.onclick = function() {
+            something.onclick = function () {
                 window.location.href = 'CLASSIFIED.zip';
             };
         </script>
@@ -61,12 +65,16 @@
     <div id="stopa_kocham_young_leosie_uwu">
 
         <marquee>Wszelkie prawa zastrzeżone 2009 &copy; kranus.pro <a
-                href="https://steamcommunity.com/groups/wegielstudio">Wegiel Studio</a> <script type = "text/javascript" src = "//www.deszczowce.pl/skrypty/ip.php"></script> </marquee>
+                href="https://steamcommunity.com/groups/wegielstudio">Wegiel Studio</a>
+            <script type="text/javascript" src="//www.deszczowce.pl/skrypty/ip.php"></script>
+        </marquee>
         <script type="text/javascript" src="//www.deszczowce.pl/licznik/licznik.php?id=123082343"></script>
     </div>
 
     <div id="chatbox">
-        <script type="text/javascript" src = "//www.deszczowce.pl/app/webroot/shoutbox/sb.php?shoutbox_id=84245231&amp;style=0&amp;width=230&amp;height=500&amp;noscroll=1"></script></div>
+        <script type="text/javascript"
+            src="//www.deszczowce.pl/app/webroot/shoutbox/sb.php?shoutbox_id=84245231&amp;style=0&amp;width=230&amp;height=500&amp;noscroll=1"></script>
+    </div>
 </body>
 
 </html>
