--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
                 <h3 class="rainbow rainbow_text_animated">kliknij tutaj</h3>
             </div>
         </a>
+        <b>
+            <h2>merch ->
+        </b></h2> <a href="obrazki.html">
+            <div id="shadowBox">
+                <h3 class="rainbow rainbow_text_animated">MERCH</h3>
+            </div>
+        </a>
         <br>
         <br>
         kocham cie mamo <3 <img src="https://media.tenor.com/Or0Kdkr9gm0AAAAC/gg-cudownie.gif" alt="mama" class="mama"
