--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </a>
         <b>
             <h2>merch ->
-        </b></h2> <a href="obrazki.html">
+        </b></h2> <a href="merch.html">
             <div id="shadowBox">
                 <h3 class="rainbow rainbow_text_animated">MERCH</h3>
             </div>
