--- a/merch.html
+++ b/merch.html
@@ -58,7 +58,7 @@
 <body>
 
   <marquee scrollamount="20">
-    <h1>MERCH OTWIERACZ DO PIWSKA MODEL 3D WYDRUKUJ SE</h1>
+    <h1>MERCH OTWIERACZ DO PIWSKA</h1>
     <br>
   </marquee>
 
@@ -87,15 +87,14 @@
   <div id="x" style="float: left; width: 40%;">
     <h1>zajebiste c nie?!</h1>
 
-
-    tu se mozesz pobrac .stl i se wydrukowac <b>hultaju</b>!
-
-    <a href="kranuspro2.stl" download>
-      <div id="shadowBox">
-        <h3 class="rainbow rainbow_text_animated">pobierz</h3>
-      </div>
-
-    zara sklep otworzymy za chwile albo dwie
+    <h1>KUP TERAZ ZA POŚREDNICTWEM OLX!</h1>
+    <div><a
+        href="https://www.olx.pl/d/oferta/otwieracz-do-piwa-kranus-pro-bialy-kruk-CID4042-IDY94jk.html?bs=olx_pro_listing">
+        <h3 class="rainbow rainbow_text_animated">KUP
+          TERAZ </h3>
+      </a>
+    </div>
+    <i><b>OFERTA OGRANICZONA CZASOWO!!! DOSTĘPNE <u>TYLKO</u> 40 SZTUK!</b></i>
   </div>
 
 </body>
