--- a/index.html
+++ b/index.html
@@ -39,12 +39,18 @@
             </div>
         </a>
         <b>
-            <h2>merch ->
-        </b></h2> <a href="merch.html">
+            <h2>ryan gosling in movie drive ->
+        </b></h2>
+        <a href="img/drive.mp4">
+            <div id="shadowBox">
+                <h3 class="rainbow rainbow_text_animated">drive 2011 movie</h3>
+            </div>
+        </a>
+        <!-- <a href="merch.html">
             <div id="shadowBox">
                 <h3 class="rainbow rainbow_text_animated">MERCH</h3>
             </div>
-        </a>
+        </a> -->
         <br>
         <br>
         kocham cie mamo <3 <img src="https://media.tenor.com/Or0Kdkr9gm0AAAAC/gg-cudownie.gif" alt="mama" class="mama"
