--- a/index.html
+++ b/index.html
@@ -5,29 +5,28 @@
     <meta charset="utf-8">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property='og:title' content='kranus.pro'>
-    <meta property='og:description' content='wiesz co? kranus.pro'>
+    <meta property='og:title' content='kranus.pro - gify, ryan gosling, essa'>
+    <meta property='og:description'
+        content='wiesz co? kranus.pro to marka, kranus.pro to rodzina, kranus.pro to koniec internetu, to strona na której znajdziesz film drive 2011 i gify discord'>
 
-    <meta name="description" content="wiesz co? kranus.pro">
-    <meta name="keywords" content="kranus, kranuspro, wegiel, studio">
+    <meta name="description"
+        content="wiesz co? kranus.pro to marka, kranus.pro to rodzina, kranus.pro to koniec internetu, to strona na której znajdziesz film drive 2011 i gify discord">
+    <meta name="keywords"
+        content="kranus, kranuspro, wegiel, studio, gif, gifs, drive, 2011, ryan, gosling, gify, discord">
     <meta name="author" content="Węgiel Studio">
 
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
     <title>kranus.pro</title>
 </head>
 
 <body>
-
-    <script type="text/javascript" src="//www.deszczowce.pl/skrypty/kursor/kursor.php?kursor=angry_bird"></script>
-
     <img src="img/kranuspro.gif" alt="kranus.pro" class="logo">
 
-
-
     <div>
-        <marquee scrollamount="20">
+        <marquee scrollamount="20">s
             <h1>potenga wykuta z czystego zelaza - zapnijcie pasy bezpiecznstwa!1!</h1>
         </marquee>
     </div>
@@ -39,26 +38,30 @@
             </div>
         </a>
         <b>
-            <h2>merch ->
-        </b></h2> <a href="merch.html">
+            <h2>ryan gosling in movie drive ->
+        </b></h2>
+        <a href="img/drive.mp4">
             <div id="shadowBox">
-                <h3 class="rainbow rainbow_text_animated">MERCH</h3>
+                <h3 class="rainbow rainbow_text_animated">drive 2011 movie</h3>
             </div>
         </a>
-        <br>
-        <br>
-        kocham cie mamo <3 <img src="https://media.tenor.com/Or0Kdkr9gm0AAAAC/gg-cudownie.gif" alt="mama" class="mama"
-            style="width: 25px; padding-top: 5px;">
 
+        <br>
     </div>
 
     <div id="x">
+        <i>kranus pro to marka, kranus.pro to rodzina, kranus.pro to koniec internetu, to strona na której znajdziesz film drive 2011 i gify discord</i>
+        <br>
+
+        <br>
+ 
         <script type="text/javascript" src="//www.deszczowce.pl/skrypty/losowy_zart.php"></script>
         <br></br>
         kontakt: sex@kranus.pro
     </div>
     <div id="essa" style="width: 1px; height: 1px; padding: 1px;margin-top: 0px;">
 
+        
         <script>
             var something = document.getElementById('essa');
 
