--- a/merch.html
+++ b/merch.html
@@ -5,23 +5,20 @@
   <meta charset="utf-8">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property='og:title' content='kranus.pro'>
-  <meta property='og:description' content='wiesz co? kranus.pro'>
+  <meta property='og:title' content='kranus.pro - gify, ryan gosling, essa'>
+  <meta property='og:description'
+      content='wiesz co? kranus.pro to marka, kranus.pro to rodzina, kranus.pro to koniec internetu, to strona na której znajdziesz film drive 2011 i gify discord'>
 
-  <meta name="description" content="wiesz co? kranus.pro">
-  <meta name="keywords" content="kranus, kranuspro, wegiel, studio">
+  <meta name="description"
+      content="wiesz co? kranus.pro to marka, kranus.pro to rodzina, kranus.pro to koniec internetu, to strona na której znajdziesz film drive 2011 i gify discord">
+  <meta name="keywords"
+      content="kranus, kranuspro, wegiel, studio, gif, gifs, drive, 2011, ryan, gosling, gify, discord">
   <meta name="author" content="Węgiel Studio">
 
-  <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/webcomponents-loader.js"></script>
-
-
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
-    integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
   <title>kranus.pro</title>
 
   <style>
