--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8Q6LZVYWDM"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-8Q6LZVYWDM');
+    </script>
+
     <title>kranus.pro</title>
 </head>
 
