--- a/obrazki.html
+++ b/obrazki.html
@@ -9,16 +9,29 @@
 
   <meta property='og:title' content='kranus.pro - gify, ryan gosling, essa'>
   <meta property='og:description'
-      content='wiesz co? kranus.pro to marka, kranus.pro to rodzina, kranus.pro to koniec internetu, to strona na której znajdziesz film drive 2011 i gify discord'>
+    content='wiesz co? kranus.pro to marka, kranus.pro to rodzina, kranus.pro to koniec internetu, to strona na której znajdziesz film drive 2011 i gify discord'>
 
   <meta name="description"
-      content="wiesz co? kranus.pro to marka, kranus.pro to rodzina, kranus.pro to koniec internetu, to strona na której znajdziesz film drive 2011 i gify discord">
+    content="wiesz co? kranus.pro to marka, kranus.pro to rodzina, kranus.pro to koniec internetu, to strona na której znajdziesz film drive 2011 i gify discord">
   <meta name="keywords"
-      content="kranus, kranuspro, wegiel, studio, gif, gifs, drive, 2011, ryan, gosling, gify, discord">
+    content="kranus, kranuspro, wegiel, studio, gif, gifs, drive, 2011, ryan, gosling, gify, discord">
   <meta name="author" content="Węgiel Studio">
 
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8Q6LZVYWDM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-8Q6LZVYWDM');
+  </script>
+
+
   <title>kranus.pro</title>
 
   <style>
