feat: bilard link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,15 @@
     </div>
 
     <div id="x">
-        kolekcja smiesznych gifow -> <a href="obrazki.html">
+
+        <div>
+            <h3 class="rainbow rainbow_text_animated"><a href="https://bilard.kranus.pro">bilard! (klikaj nie gadaj)</a>
+            </h3>
+        </div>
+
+
+        kolekcja smiesznych gifow ->
+        <a href="obrazki.html">
             <div id="shadowBox">
                 <h3 class="rainbow rainbow_text_animated">lista gifow (kliknij mnie)</h3>
             </div>
@@ -95,16 +103,11 @@
                 <h3 class="rainbow rainbow_text_animated">drive 2011 movie</h3>
             </div>
         </a>
-        <!-- <a href="merch.html">
+        <a href="merch.html">
             <div id="shadowBox">
-                <h3 class="rainbow rainbow_text_animated">drive 2011 movie</h3>
+                <h3 class="rainbow rainbow_text_animated">merch!1</h3>
             </div>
         </a>
-        <!-- <a href="merch.html">
-            <div id="shadowBox">
-                <h3 class="rainbow rainbow_text_animated">drive 2011 movie</h3>
-            </div>
-        </a> -->
         <br>
         <br>
         kocham cie mamo <3 <img src="https://media.tenor.com/Or0Kdkr9gm0AAAAC/gg-cudownie.gif" alt="mama" class="mama"
