--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
         <center>zagraj se panocku w gre!<br><canvas id="unity-canvas" width=600 height=600
                 style="width: 600px; height: 600px; background: #000000; display: flex;"></canvas>
             <script src="Build/WEBGL-JAMJUMPIN-1.0.7-2.loader.js"></script>
+
+            
             <script>
                 if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
                     // Mobile device style: fill the whole browser client area with the game canvas:
@@ -94,7 +96,7 @@
 
         </center>
         <br>
-
+        <center><iframe allowtransparency='true' frameborder='0' height='160' scrolling='no' src='https://www.strava.com/clubs/1479587/latest-rides/14541e0f32747697095e539c161012f5d05ae227?show_rides=false' width='300'></iframe></center>
         <b>
             <h2>ryan gosling in movie drive ->
         </b></h2>
@@ -103,6 +105,9 @@
                 <h3 class="rainbow rainbow_text_animated">drive 2011 movie</h3>
             </div>
         </a>
+        
+
+
         <a href="merch.html">
             <div id="shadowBox">
                 <h3 class="rainbow rainbow_text_animated">merch!1</h3>
