BORATgit add .git add . IRC

--- a/index.html
+++ b/index.html
@@ -46,8 +46,24 @@
     <div id="x">
 
         <div>
+            <h3>serwer irc: <u> irc.kranus.pro 40192 </u> zapraszamy serdecznie! <33 na kanal #general </h3>
+            
+            <br> irc dla linux!: <textarea onclick="this.select()" rows="1" cols="50">sudo apt install irssi -y</textarea>
+            <textarea onclick="this.select()" rows="1" cols="50">irssi -c irc.kranus.pro -p 40192</textarea>
+            <br> irc dla macos!: nie wiem xd kto korzysta z maca xdd
+            <br> irc dla windows!: <a href="https://www.mirc.com/get.html">mirc.com/get.html</a>
+        </div>
+
+        <br>    
+        <br>
+
+        <div>
             <h3 class="rainbow rainbow_text_animated"><a href="https://bilard.kranus.pro">bilard! (klikaj nie gadaj)</a>
             </h3>
+        </div>
+
+        <div>
+            <h3 class="rainbow rainbow_text_animated"><a href="borat.html">borat 2006 (klikaj1!1!)</a></h3>
         </div>
 
 
