--- a/index.html
+++ b/index.html
@@ -45,13 +45,16 @@
 
     <div id="x">
 
-        <div>
+        <!-- <div>
             <h3>serwer irc: <u> irc.kranus.pro 40192 </u> zapraszamy serdecznie! <33 na kanal #general </h3>
             
             <br> irc dla linux!: <textarea onclick="this.select()" rows="1" cols="50">sudo apt install irssi -y</textarea>
             <textarea onclick="this.select()" rows="1" cols="50">irssi -c irc.kranus.pro -p 40192</textarea>
             <br> irc dla macos!: nie wiem xd kto korzysta z maca xdd
             <br> irc dla windows!: <a href="https://www.mirc.com/get.html">mirc.com/get.html</a>
+        </div> -->
+        <div>
+            <h3 class="rainbow rainbow_text_animated"><a href="bingo.html" style="color: cyan;">bingo sylwester metkow!!!1!! (klikaj nie gadaj)</a></h3> 
         </div>
 
         <br>    
