--- a/bingo.html
+++ b/bingo.html
@@ -184,8 +184,14 @@
       "Koniec wódki",
       "Koniec popity",
       "Ktoś rzygał przez balkon",
-      "Disco Polo moment"
+      "Disco Polo moment",
+      "Ktoś zdjął koszulkę",
+      "Ktoś ustawił j. arabski w systemie",
+      "K. Jaworek najebał się jak szpadel",
+      "Ktoś zeżarł kostkę od kibla",
     ];
+
+    // remzak remzak ty ciulu
 
     function seededRandom(seed) {
       let hash = 0;
